# fabric-cicd

./: .gitignore  README.md  config.py  deployment.py  helpers.py  main.py  main2.py  pyproject.toml
config/: auth.SAMPLE.toml  deploy.SAMPLE.toml
deployment/: __init__.py  run.py
documentation/: code_structure.drawio
helpers/: __init__.py  fabric.py  general.py
